# photo-metadata-cloner

./: .gitignore  README.md  noai-watermark  pyproject.toml  release.sh
.github/workflows/: publish-pypi.yml  release-homebrew.yml
packaging/homebrew/: noai-watermark.rb.template
src/: __init__.py  c2pa.py  cleaner.py  cli.py  cli_watermark.py  cloner.py  constants.py  download_ui.py  extractor.py  img2img_runner.py  injector.py  metadata_handler.py  noai_cli.py  noai_cli_watermark.py  progress.py  utils.py  watermark_profiles.py  watermark_remover.py
src/ctrlregen/: __init__.py  engine.py  ip_adapter.py  pipeline.py  tiling.py
tests/: __init__.py  conftest.py  test_c2pa.py  test_cleaner.py  test_cloner.py  test_constants.py  test_ctrlregen.py  test_download_ui.py  test_extractor.py  test_injector.py  test_metadata_handler.py  test_progress.py  test_utils.py  test_watermark_profiles.py  test_watermark_remover.py
